# aiida-open_circuit_voltage

./: .gitignore  MANIFEST.in  README.md  functions.py  metadata.json  pyproject.toml  setup.json  setup.py
aiida_open_circuit_voltage/: __init__.py  cations.py
aiida_open_circuit_voltage/calculations/functions/: functions.py
aiida_open_circuit_voltage/workflows/: mlip_workflow.py  workchain.py
aiida_open_circuit_voltage/workflows/protocols/: ocv.yaml
test/: LiFePO4.aiida  structures.aiida
test/json_inputs/: LCO.json  Li_olivine.json  Mg_chevrel.json  inputs.json  outputs.json
test/workflows/: Submit_OCVWorkChain.ipynb
