[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiida-open_circuit_voltage"
version = "0.3.0"
description = "The AiiDA plugin to calculate ocv at various charge of states using QE"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Tushar Thakur", email = "tushar.thakur@epfl.ch" }]
classifiers = [
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "aiida-core>=1.1.0",
    "aiida-quantumespresso>=3.1",
    "supercellor>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/tsthakur/aiida-open_circuit_voltage"

[project.optional-dependencies]
testing = [
    "pgtest~=1.3.1",
    "wheel~=0.31",
    "coverage",
    "pytest~=6.0",
    "pytest-cov",
]
pre-commit = [
    "pre-commit~=2.2",
    "pylint>=2.5.0",
]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-design",
    "sphinx-book-theme",
    "sphinxcontrib-details-directive~=0.1.0",
]

[project.entry-points."aiida.workflows"]
"quantumespresso.ocv.ocvwc" = "aiida_open_circuit_voltage.workflows.workchain:OCVWorkChain"

[tool.hatch.build.targets.sdist]
exclude = ["docs/", "tests/"]
